--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +40,7 @@
     "import torch\n",
     "from torchvision import datasets, transforms\n",
     "\n",
+    "import torchvision.models as models\n",
     "# import helper"
    ]
   },
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,40 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.6549, 0.6784, 0.7137,  ..., 0.8039, 0.8000, 0.7804],\n",
-      "        [0.6745, 0.6784, 0.7020,  ..., 0.7804, 0.7804, 0.7765],\n",
-      "        [0.6941, 0.6784, 0.6863,  ..., 0.7608, 0.7647, 0.7725],\n",
-      "        ...,\n",
-      "        [0.8941, 0.8941, 0.8902,  ..., 0.8588, 0.8275, 0.8000],\n",
-      "        [0.8902, 0.8863, 0.8824,  ..., 0.8392, 0.8118, 0.7922],\n",
-      "        [0.8824, 0.8745, 0.8745,  ..., 0.8275, 0.8078, 0.7922]])\n",
-      "0\n",
-      "tensor([[0.0392, 0.0627, 0.0627,  ..., 0.5882, 0.5804, 0.5490],\n",
-      "        [0.0510, 0.0627, 0.0588,  ..., 0.5765, 0.5647, 0.5451],\n",
-      "        [0.0431, 0.0588, 0.0588,  ..., 0.5490, 0.5490, 0.5490],\n",
-      "        ...,\n",
-      "        [0.0000, 0.0000, 0.0000,  ..., 0.2235, 0.2392, 0.2627],\n",
-      "        [0.0000, 0.0000, 0.0000,  ..., 0.2157, 0.2275, 0.2431],\n",
-      "        [0.0000, 0.0000, 0.0000,  ..., 0.2196, 0.2314, 0.2431]])\n",
-      "0\n",
-      "tensor([[0.0000, 0.0000, 0.0000,  ..., 0.2196, 0.2196, 0.1922],\n",
-      "        [0.0000, 0.0000, 0.0000,  ..., 0.2431, 0.2392, 0.2275],\n",
-      "        [0.0000, 0.0000, 0.0000,  ..., 0.2627, 0.2588, 0.2510],\n",
-      "        ...,\n",
-      "        [0.0039, 0.0039, 0.0039,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0039,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000]])\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: Define your transforms for the training, validation, and testing sets\n",
     "# data_transforms = \n",
@@ -144,14 +114,14 @@
     "images_test, labels_test = next(iter(train_data))\n",
     "# helper.imshow(images[0], normalize=False)\n",
     "\n",
-    "print(images_train[0])\n",
-    "print(labels_train)\n",
+    "# print(images_train[0])\n",
+    "# print(labels_train)\n",
     "\n",
-    "print(images_valid[0])\n",
-    "print(labels_valid)\n",
+    "# print(images_valid[0])\n",
+    "# print(labels_valid)\n",
     "\n",
-    "print(images_test[0])\n",
-    "print(labels_test)"
+    "# print(images_test[0])\n",
+    "# print(labels_test)"
    ]
   },
   {
@@ -165,24 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'21': 'fire lily', '3': 'canterbury bells', '45': 'bolero deep blue', '1': 'pink primrose', '34': 'mexican aster', '27': 'prince of wales feathers', '7': 'moon orchid', '16': 'globe-flower', '25': 'grape hyacinth', '26': 'corn poppy', '79': 'toad lily', '39': 'siam tulip', '24': 'red ginger', '67': 'spring crocus', '35': 'alpine sea holly', '32': 'garden phlox', '10': 'globe thistle', '6': 'tiger lily', '93': 'ball moss', '33': 'love in the mist', '9': 'monkshood', '102': 'blackberry lily', '14': 'spear thistle', '19': 'balloon flower', '100': 'blanket flower', '13': 'king protea', '49': 'oxeye daisy', '15': 'yellow iris', '61': 'cautleya spicata', '31': 'carnation', '64': 'silverbush', '68': 'bearded iris', '63': 'black-eyed susan', '69': 'windflower', '62': 'japanese anemone', '20': 'giant white arum lily', '38': 'great masterwort', '4': 'sweet pea', '86': 'tree mallow', '101': 'trumpet creeper', '42': 'daffodil', '22': 'pincushion flower', '2': 'hard-leaved pocket orchid', '54': 'sunflower', '66': 'osteospermum', '70': 'tree poppy', '85': 'desert-rose', '99': 'bromelia', '87': 'magnolia', '5': 'english marigold', '92': 'bee balm', '28': 'stemless gentian', '97': 'mallow', '57': 'gaura', '40': 'lenten rose', '47': 'marigold', '59': 'orange dahlia', '48': 'buttercup', '55': 'pelargonium', '36': 'ruby-lipped cattleya', '91': 'hippeastrum', '29': 'artichoke', '71': 'gazania', '90': 'canna lily', '18': 'peruvian lily', '98': 'mexican petunia', '8': 'bird of paradise', '30': 'sweet william', '17': 'purple coneflower', '52': 'wild pansy', '84': 'columbine', '12': \"colt's foot\", '11': 'snapdragon', '96': 'camellia', '23': 'fritillary', '50': 'common dandelion', '44': 'poinsettia', '53': 'primula', '72': 'azalea', '65': 'californian poppy', '80': 'anthurium', '76': 'morning glory', '37': 'cape flower', '56': 'bishop of llandaff', '60': 'pink-yellow dahlia', '82': 'clematis', '58': 'geranium', '75': 'thorn apple', '41': 'barbeton daisy', '95': 'bougainvillea', '43': 'sword lily', '83': 'hibiscus', '78': 'lotus lotus', '88': 'cyclamen', '94': 'foxglove', '81': 'frangipani', '74': 'rose', '89': 'watercress', '73': 'water lily', '46': 'wallflower', '77': 'passion flower', '51': 'petunia'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
     "with open('cat_to_name.json', 'r') as f:\n",
     "    cat_to_name = json.load(f)\n",
     "    \n",
-    "print(cat_to_name)"
+    "# print(cat_to_name)"
    ]
   },
   {
@@ -212,11 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Build and train your network"
+    "# TODO: Build and train your network\n",
+    "\n",
+    "# Load a pretrained network\n",
+    "vgg16 = models.vgg16(pretrained=True)"
    ]
   },
   {
@@ -430,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
