--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -29,36 +29,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Imports here\n",
-    "%matplotlib inline\n",
-    "%config InlineBackend.figure_format = 'retina'\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import torch\n",
-    "from torchvision import datasets, transforms\n",
-    "from torch import nn\n",
-    "from torch import optim\n",
-    "\n",
-    "import torchvision.models as models\n",
-    "import helper\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3.. Train loss: 19.027.. Test loss: 20.979.. Test accuracy: 0.004\n",
+      "Epoch 1/3.. Train loss: 7.020.. Test loss: 5.536.. Test accuracy: 0.014\n",
+      "Epoch 1/3.. Train loss: 5.542.. Test loss: 5.562.. Test accuracy: 0.011\n",
+      "Epoch 1/3.. Train loss: 5.567.. Test loss: 5.249.. Test accuracy: 0.011\n",
+      "Epoch 1/3.. Train loss: 5.307.. Test loss: 5.235.. Test accuracy: 0.006\n",
+      "Epoch 1/3.. Train loss: 5.064.. Test loss: 5.437.. Test accuracy: 0.004\n",
+      "Epoch 1/3.. Train loss: 5.607.. Test loss: 5.243.. Test accuracy: 0.018\n",
+      "Epoch 1/3.. Train loss: 5.291.. Test loss: 5.263.. Test accuracy: 0.014\n",
+      "Epoch 1/3.. Train loss: 5.289.. Test loss: 5.269.. Test accuracy: 0.007\n",
+      "Epoch 1/3.. Train loss: 5.326.. Test loss: 5.219.. Test accuracy: 0.012\n",
+      "Epoch 1/3.. Train loss: 5.344.. Test loss: 5.230.. Test accuracy: 0.014\n",
+      "Epoch 1/3.. Train loss: 5.312.. Test loss: 5.248.. Test accuracy: 0.011\n",
+      "Epoch 1/3.. Train loss: 5.244.. Test loss: 5.247.. Test accuracy: 0.006\n",
+      "Epoch 1/3.. Train loss: 5.227.. Test loss: 5.245.. Test accuracy: 0.006\n",
+      "Epoch 1/3.. Train loss: 5.270.. Test loss: 5.248.. Test accuracy: 0.008\n",
+      "Epoch 1/3.. Train loss: 5.306.. Test loss: 5.234.. Test accuracy: 0.007\n",
+      "Epoch 1/3.. Train loss: 5.297.. Test loss: 5.227.. Test accuracy: 0.007\n",
+      "Epoch 1/3.. Train loss: 5.271.. Test loss: 5.223.. Test accuracy: 0.007\n",
+      "Epoch 1/3.. Train loss: 5.326.. Test loss: 5.216.. Test accuracy: 0.007\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format = 'retina'\n",
@@ -117,16 +114,6 @@
     "for param in model.parameters():\n",
     "    param.requires_grad = False\n",
     "\n",
-    "# model.classifier = nn.Sequential(\n",
-    "# nn.Linear(25088, 1024),\n",
-    "# nn.ReLU(),\n",
-    "# nn.Dropout(0.2),\n",
-    "# nn.Linear(1024, 256),\n",
-    "# nn.ReLU(),\n",
-    "# nn.Dropout(0.2),\n",
-    "# nn.Linear(256, 192),\n",
-    "# nn.LogSoftmax(dim=1))\n",
-    "\n",
     "model.classifier = nn.Sequential(\n",
     " nn.Linear(25088, 1024),\n",
     " nn.ReLU(),\n",
@@ -147,8 +134,8 @@
     "model\n",
     "\n",
     "train_losses, test_losses = [], []\n",
-    "epochs = 1\n",
-    "steps = 1\n",
+    "epochs = 3\n",
+    "steps = 2\n",
     "running_loss = 0\n",
     "print_every = 5\n",
     "for epoch in range(epochs):\n",
@@ -206,6 +193,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports here\n",
+    "%matplotlib inline\n",
+    "%config InlineBackend.figure_format = 'retina'\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import torch\n",
+    "from torchvision import datasets, transforms\n",
+    "from torch import nn\n",
+    "from torch import optim\n",
+    "\n",
+    "import torchvision.models as models\n",
+    "# import helper\n",
+    "import time"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,6 +246,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: Define your transforms for the training, validation, and testing sets\n",
+    "# TODO: Load the datasets with ImageFolder\n",
+    "# TODO: Using the image datasets and the trainforms, define the dataloaders\n",
+    "\n",
     "# Define transforms for the training data and testing data\n",
     "train_transforms = transforms.Compose([transforms.RandomRotation(30),\n",
     "                                       transforms.RandomResizedCrop(224),\n",
@@ -246,13 +259,11 @@
     "\n",
     "valid_transforms = transforms.Compose([transforms.Resize(255),\n",
     "                                      transforms.CenterCrop(224),\n",
-    "                                      transforms.ToTensor(),\n",
-    "                                      transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])])\n",
+    "                                      transforms.ToTensor()])\n",
     "\n",
     "test_transforms = transforms.Compose([transforms.Resize(255),\n",
     "                                      transforms.CenterCrop(224),\n",
-    "                                      transforms.ToTensor(),\n",
-    "                                      transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])])\n",
+    "                                      transforms.ToTensor()])\n",
     "\n",
     "# Pass transforms in here, then run the next cell to see how the transforms look\n",
     "train_data = datasets.ImageFolder(train_dir, transform=train_transforms)\n",
@@ -269,16 +280,9 @@
     "images_test, labels_test = next(iter(train_data))\n",
     "\n",
     "# testing image visualisation\n",
-    "# data_iter = iter(testloader)\n",
+    "data_iter = iter(testloader)\n",
     "\n",
-    "# images, labels = next(data_iter)\n",
-    "\n",
-    "# helper.imshow(images[0], normalize=False)\n",
-    "\n",
-    "# fig, axes = plt.subplots(figsize=(10,4), ncols=4)\n",
-    "# for ii in range(4):\n",
-    "#     ax = axes[ii]\n",
-    "#     helper.imshow(images[ii], ax=ax, normalize=False)"
+    "images, labels = next(data_iter)"
    ]
   },
   {
@@ -301,7 +305,7 @@
     "with open('cat_to_name.json', 'r') as f:\n",
     "    cat_to_name = json.load(f)\n",
     "    \n",
-    "cat_to_name"
+    "# print(cat_to_name)"
    ]
   },
   {
@@ -339,50 +343,25 @@
     "\n",
     "# Use GPU if it's available\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "# device = torch.device(\"cpu\")\n",
     "\n",
     "# Load a pretrained network\n",
-    "model = models.resnet(pretrained=True)\n",
+    "model = models.vgg16(pretrained=True)\n",
     "\n",
     "# Freeze parameters so we don't backprop through them\n",
     "for param in model.parameters():\n",
     "    param.requires_grad = False\n",
     "\n",
-    "# from collections import OrderedDict\n",
-    "#classifier = nn.Sequential(OrderedDict([\n",
-    "#                          ('fc1', nn.Linear(1024, 500)),\n",
-    "#                          ('relu', nn.ReLU()),\n",
-    "#                          ('fc2', nn.Linear(500, 2)),\n",
-    "#                          ('output', nn.LogSoftmax(dim=1))\n",
-    "#                          ]))\n",
-    "    \n",
-    "# model.classifier = classifier\n",
-    "  \n",
-    "#model.classifier = nn.Sequential(nn.Linear(25088, 5000),\n",
-    "#                                 nn.ReLU(),nn.Dropout(0.2),\n",
-    "#                                 nn.Linear(5000, 2),\n",
-    "#                                 nn.LogSoftmax(dim=1))\n",
-    "\n",
     "model.classifier = nn.Sequential(\n",
-    " nn.Linear(25088, 15000),\n",
+    " nn.Linear(25088, 12000),\n",
     " nn.ReLU(),\n",
     " nn.Dropout(0.2),\n",
-    " nn.Linear(15000, 10000),\n",
+    " nn.Linear(12000, 6000),\n",
     " nn.ReLU(),\n",
     " nn.Dropout(0.2),\n",
-    " nn.Linear(10000, 5000),\n",
+    " nn.Linear(6000,600),\n",
     " nn.ReLU(),\n",
     " nn.Dropout(0.2),\n",
-    " nn.Linear(5000, 2500),\n",
-    " nn.ReLU(),\n",
-    " nn.Dropout(0.2),\n",
-    " nn.Linear(2500, 1200),\n",
-    " nn.ReLU(),\n",
-    " nn.Dropout(0.2),\n",
-    " nn.Linear(1200, 600),\n",
-    " nn.ReLU(),\n",
-    " nn.Dropout(0.2),\n",
-    " nn.Linear(600, 102),\n",
+    " nn.Linear(600,2),\n",
     " nn.LogSoftmax(dim=1))\n",
     "\n",
     "criterion = nn.NLLLoss()\n",
@@ -392,8 +371,25 @@
     "\n",
     "model.to(device);\n",
     "\n",
-    "model\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing your network\n",
     "\n",
+    "It's good practice to test your trained network on test data, images the network has never seen either in training or validation. This will give you a good estimate for the model's performance on completely new images. Run the test images through the network and measure the accuracy, the same way you did validation. You should be able to reach around 70% accuracy on the test set if the model has been trained well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Do validation on the test set\n",
     "epochs = 1\n",
     "steps = 0\n",
     "running_loss = 0\n",
@@ -443,36 +439,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing your network\n",
-    "\n",
-    "It's good practice to test your trained network on test data, images the network has never seen either in training or validation. This will give you a good estimate for the model's performance on completely new images. Run the test images through the network and measure the accuracy, the same way you did validation. You should be able to reach around 70% accuracy on the test set if the model has been trained well."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Do validation on the test set\n",
-    "correct = 0\n",
-    "total = 0\n",
-    "with torch.no_grad():\n",
-    "    model.eval()\n",
-    "    for data in testloader:\n",
-    "        images, labels = data\n",
-    "        images, labels = images.to(device), labels.to(device)\n",
-    "        outputs = model(images)\n",
-    "        _, predicted = torch.max(outputs.data, 1)\n",
-    "        total += labels.size(0)\n",
-    "        correct += (predicted == labels).sum().item()\n",
-    "print('Accuracy  on test images is: %d%%' % (100 * correct / total))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Save the checkpoint\n",
     "\n",
     "Now that your network is trained, save the model so you can load it later for making predictions. You probably want to save other things such as the mapping of classes to indices which you get from one of the image datasets: `image_datasets['train'].class_to_idx`. You can attach this to the model as an attribute which makes inference easier later on.\n",
@@ -484,11 +450,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our model: \n",
+      "\n",
+      " VGG(\n",
+      "  (features): Sequential(\n",
+      "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): ReLU(inplace)\n",
+      "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (3): ReLU(inplace)\n",
+      "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (6): ReLU(inplace)\n",
+      "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (8): ReLU(inplace)\n",
+      "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (11): ReLU(inplace)\n",
+      "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (13): ReLU(inplace)\n",
+      "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (15): ReLU(inplace)\n",
+      "    (16): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (17): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (18): ReLU(inplace)\n",
+      "    (19): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (20): ReLU(inplace)\n",
+      "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (22): ReLU(inplace)\n",
+      "    (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (24): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (25): ReLU(inplace)\n",
+      "    (26): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (27): ReLU(inplace)\n",
+      "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (29): ReLU(inplace)\n",
+      "    (30): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  )\n",
+      "  (classifier): Sequential(\n",
+      "    (0): Linear(in_features=25088, out_features=1024, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Dropout(p=0.2)\n",
+      "    (3): Linear(in_features=1024, out_features=256, bias=True)\n",
+      "    (4): ReLU()\n",
+      "    (5): Dropout(p=0.2)\n",
+      "    (6): Linear(in_features=256, out_features=192, bias=True)\n",
+      "    (7): LogSoftmax()\n",
+      "  )\n",
+      ") \n",
+      "\n",
+      "The state dict keys: \n",
+      "\n",
+      " odict_keys(['features.0.weight', 'features.0.bias', 'features.2.weight', 'features.2.bias', 'features.5.weight', 'features.5.bias', 'features.7.weight', 'features.7.bias', 'features.10.weight', 'features.10.bias', 'features.12.weight', 'features.12.bias', 'features.14.weight', 'features.14.bias', 'features.17.weight', 'features.17.bias', 'features.19.weight', 'features.19.bias', 'features.21.weight', 'features.21.bias', 'features.24.weight', 'features.24.bias', 'features.26.weight', 'features.26.bias', 'features.28.weight', 'features.28.bias', 'classifier.0.weight', 'classifier.0.bias', 'classifier.3.weight', 'classifier.3.bias', 'classifier.6.weight', 'classifier.6.bias'])\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Save the checkpoint "
+    "# TODO: Save the checkpoint \n",
+    "print(\"Our model: \\n\\n\", model, '\\n')\n",
+    "print(\"The state dict keys: \\n\\n\", model.state_dict().keys())\n",
+    "\n",
+    "checkpoint = {'input_size': 25088,\n",
+    "              'output_size': 192,\n",
+    "              #'hidden_layers': [each.out_features for each in model.hidden_layers],\n",
+    "              'state_dict': model.state_dict()}\n",
+    "\n",
+    "torch.save(checkpoint, 'checkpoint.pth')"
    ]
   },
   {
@@ -502,11 +535,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fc_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-61c700da9ece>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_checkpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'checkpoint.pth'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-12-61c700da9ece>\u001b[0m in \u001b[0;36mload_checkpoint\u001b[0;34m(filepath)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_checkpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mcheckpoint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     model = fc_model.Network(checkpoint['input_size'],\n\u001b[0m\u001b[1;32m      5\u001b[0m                              \u001b[0mcheckpoint\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'output_size'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                              checkpoint['hidden_layers'])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fc_model' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Write a function that loads a checkpoint and rebuilds the model"
+    "# TODO: Write a function that loads a checkpoint and rebuilds the model\n",
+    "def load_checkpoint(filepath):\n",
+    "    checkpoint = torch.load(filepath)\n",
+    "    model = fc_model.Network(checkpoint['input_size'],\n",
+    "                             checkpoint['output_size'],\n",
+    "                             checkpoint['hidden_layers'])\n",
+    "    model.load_state_dict(checkpoint['state_dict'])\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "model = load_checkpoint('checkpoint.pth')\n",
+    "print(model)\n",
+    "\n",
+    "state_dict = torch.load('checkpoint.pth')"
    ]
   },
   {
@@ -662,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
